Improved description of distributions  and parameters.

--- a/bayes/bayesian_hello_world_tutorial.ipynb
+++ b/bayes/bayesian_hello_world_tutorial.ipynb
@@ -35,8 +35,9 @@
     "In general, statistical models are defined by some parameters. For example, \n",
     "\n",
     "  - a <i>normal</i> <i>distribution</i> is defined by its _mean_ and its _standard deviation_. \n",
-    "  - a <i>beta distribution</i> is defined by its <i>alpha</i> and <i>beta</i> parameters. \n",
-    "  - an <i>exponential distribution</i> is defined by its <i>lambda</i>."
+    "  - a <i>beta distribution</i> is defined by its <i>alpha</i> ($\\alpha$) and <i>beta</i> ($\\beta$) parameters. \n",
+    "  - an <i>exponential distribution</i> is defined by its <i>lambda</i> ($\\lambda$).\n",
+    "  - a <i>Bernoulli distribution</i> is defined by its <i>theta</i> ($\\theta$)."
    ]
   },
   {
